<resources>
    <string name="app_name">Crypto Ticker</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="coin_name">Coin Name : </string>
    <string name="hashing_algo">Hashing Algorithm : </string>
    <string name="description">Description : </string>
    <string name="current_price">Current Price : </string>
    <string name="price_change">Price Change Percentage Last 24h : </string>
    <string name="add_to_favorite">Add to Favorıte</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email">Enter Your Email Address</string>
    <string name="password">Enter Your Password</string>
</resources>