<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.example.cryptoticker.model.CryptoResponse" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background">

        <ProgressBar
            android:id="@+id/detail_progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:context=".view.fragments.DetailFragment">


            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btn_favorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp"
                android:backgroundTint="#04DCC7"
                android:src="@drawable/ic_baseline_favorite_24"
                app:maxImageSize="30dp" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_coins"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                app:cardCornerRadius="60dp">

                <ImageView
                    android:id="@+id/img_coins"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:setImageResource="@{viewModel.image.large}" />

            </androidx.cardview.widget.CardView>

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/cv_coins"
                android:layout_marginTop="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/title_coin_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:text="@string/coin_name"
                        android:textColor="@color/purple_700"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/coin_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/title_coin_name"
                        android:layout_marginStart="20dp"
                        android:text="@{viewModel.name}"
                        android:textColor="@color/black"
                        android:textSize="30sp" />

                    <TextView
                        android:id="@+id/title_hashing_algo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/coin_name"
                        android:layout_marginStart="20dp"
                        android:text="@string/hashing_algo"
                        android:textColor="@color/purple_700"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/hashing_algo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/title_hashing_algo"
                        android:layout_marginStart="20dp"
                        android:text="@{viewModel.hashingAlgorithm}"
                        android:textColor="@color/black"
                        android:textSize="25sp" />

                    <TextView
                        android:id="@+id/title_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/hashing_algo"
                        android:layout_marginStart="20dp"
                        android:text="@string/description"
                        android:textColor="@color/purple_700"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/title_description"
                        android:layout_marginStart="20dp"
                        android:text="@{viewModel.description.en}"
                        android:textColor="@color/black"
                        android:textSize="25sp" />

                    <TextView
                        android:id="@+id/title_current_price"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/description"
                        android:layout_marginStart="20dp"
                        android:text="@string/current_price"
                        android:textColor="@color/purple_700"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/current_price"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/title_current_price"
                        android:layout_marginStart="20dp"
                        android:text="@{String.valueOf(viewModel.marketData.currentPrice.usd)}"
                        android:textColor="@color/black"
                        android:textSize="25sp" />

                    <TextView
                        android:id="@+id/title_price_change"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/current_price"
                        android:layout_marginStart="20dp"
                        android:text="@string/price_change"
                        android:textColor="@color/purple_700"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/price_change"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/title_price_change"
                        android:layout_marginStart="20dp"
                        android:text="@{String.valueOf(viewModel.changedPrice)}"
                        android:textColor="@color/black"
                        android:textSize="25sp" />


                </RelativeLayout>

            </androidx.core.widget.NestedScrollView>


        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>